syntax = "proto2";
import "game_commands.proto";
message Command_StopDumpZone {
    extend GameCommand {
        optional Command_StopDumpZone ext = 1025;
    }
    optional sint32 player_id = 1;
    optional string zone_name = 2;
}
